syntax = "proto3";

import "proto/common.proto";

package hotel_pb;

service SpawnerService {
  // Check the current status of the spawner service including asking
  // how many game servers it's currently managing.
  rpc CheckStatus(CheckStatusRequest) returns (CheckStatusResponse) {}

  // Request that the service spawn a new game server.
  rpc SpawnServer(SpawnServerRequest) returns (SpawnServerResponse) {}
}

message CheckStatusRequest {}

message CheckStatusResponse {
  SpawnerStatus status = 1;
}

message SpawnServerRequest {}

message SpawnServerResponse {
  // Host for the newly spawned game server.
  string host = 1;

  // Port for the newly spawned game server.
  uint32 port = 2;
}
